# zPump

./: .gitignore  AUTOMATED_TESTING_SCRIPT.sh  Anchor.toml  BUILD_STATUS.md  COMPLETE_SETUP_SUMMARY.md  COMPLETE_TESTING_GUIDE.md  COMPLETION_PLAN.md  COMPLETION_SUMMARY.md  COVERAGE_REPORT.md  CURRENT_STATUS.md  Cargo.toml  FINAL_STATUS.md  FINAL_SUMMARY.md  FULL_SETUP_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  MISSING_SERVICES.md  NEXT_STEPS.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_STATUS.md  README.md  REMAINING_WORK.md  TESTING_READY_STATUS.md  TESTING_STATUS.md  TEST_COVERAGE_SUMMARY.md  TEST_PROGRESS.md  TEST_READY_STATUS.md  TEST_RESULTS_SUMMARY.md  VALIDATOR_SETUP.md  VALIDATOR_SUCCESS.md  VALIDATOR_TROUBLESHOOTING.md  WHAT_IS_LEFT.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
.cursor/project-docs/: 01-project-overview.md  02-critical-issues-and-solutions.md  03-implementation-patterns.md  04-build-and-deployment.md  05-testing-guide.md  06-troubleshooting-guide.md  07-architecture-deep-dive.md  README.md
.cursor/rules/: cursor-rules.mdc  project-implementation.mdc  self-improve.mdc
circuits/: README.md  package-lock.json  package.json  poseidon.circom
circuits/shield/: circuit.circom  circuit.r1cs  circuit_0000.zkey  circuit_0001.zkey  circuit_final.zkey  input.json  proof.json  test_input.json  test_proof2.json  test_public2.json  test_witness.wtns  verification_key.json
circuits/transfer/: circuit.circom  circuit.r1cs  circuit_0000.zkey  circuit_0001.zkey  verification_key.json
docs/: CIRCUIT_COMPILATION.md  CIRCUIT_COMPILATION_STATUS.md  CIRCUIT_IMPLEMENTATION.md  CIRCUIT_SETUP.md  CIRCUIT_SETUP_INSTRUCTIONS.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_TESTING.md  DEPLOYMENT_CHECKLIST.md  EXTERNAL_VERIFIER_SERVICE.md  GAS_COSTS.md  GROTH16_VERIFICATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTING.md  PAIRING_CHECKS_LIMITATION.md  PRODUCTION_READY_VERIFICATION.md  PROOF_SERVICE.md  PROOF_SERVICE_DEPLOYMENT.md  PROOF_SERVICE_SETUP.md  REMAINING_WORK.md
programs/ptf_dex/: Cargo.toml
programs/ptf_dex/src/: lib.rs
programs/ptf_factory/: Cargo.toml
programs/ptf_factory/src/: errors.rs  lib.rs  state.rs
programs/ptf_factory/src/instructions/: create_verifying_key.rs  initialize_factory.rs  mod.rs  register_mint.rs
programs/ptf_pool/: Cargo.toml
programs/ptf_pool/src/: entrypoint.rs  errors.rs  lib.rs  state.rs
programs/ptf_pool/src/instructions/: approve_allowance.rs  execute_batch_transfer.rs  execute_batch_transfer_from.rs  execute_shield_v2.rs  execute_transfer.rs  execute_transfer_from.rs  execute_unshield_update.rs  execute_unshield_verify.rs  execute_unshield_withdraw.rs  mod.rs  prepare_shield.rs  prepare_unshield.rs  shield_core.rs  update_operation_data.rs
programs/ptf_vault/: Cargo.toml
programs/ptf_vault/src/: errors.rs  lib.rs  state.rs
programs/ptf_vault/src/instructions/: deposit.rs  mod.rs  withdraw.rs
programs/ptf_verifier_groth16/: Cargo.toml
programs/ptf_verifier_groth16/src/: errors.rs  lib.rs  state.rs  verification.rs
programs/ptf_verifier_groth16/src/instructions/: initialize_verifying_key.rs  mod.rs  verify_groth16.rs  verify_with_attestation.rs
scripts/: bootstrap-private-devnet.ts  bootstrap-wsol.ts  compile-circuits-without-circom.sh  convert-verifying-key.ts  copy-idls.sh  create-test-token.ts  deploy-all.sh  generate-circuits.sh  generate-keys.sh  install-circom-binary.sh  install-circom.sh  install-circuit-deps.sh  print-gas-report.ts  reset-dev-env.sh  run-comprehensive-tests.sh  run-production-tests.sh  setup-proof-service.sh  start-all-services.sh  start-external-verifier.sh  start-private-devnet-with-upgrade.sh  start-proof-service.sh  test-gas-limits.sh  test-proof-service.sh  validate-circuits.sh
services/external-verifier/: Cargo.toml
services/external-verifier/src/: attestation.rs  main.rs  verifier.rs
services/proof-service/: Cargo.toml  README.md
services/proof-service/src/: circuit_handler.rs  config.rs  main.rs  proof_generator.rs  snarkjs_integration.rs
tests/: coverage-data.json  coverage-report.ts  mocha.opts  package-lock.json  package.json  setup.ts  tsconfig.json
web/: .token-metadata.json  next.config.js  package-lock.json  package.json
(+116 files in other folders)
