[workspace]
members = [
    "programs/ptf_pool",
    "programs/ptf_factory",
    "programs/ptf_vault",
    "programs/ptf_verifier_groth16",
    "programs/ptf_dex",
    "programs/common",
    "services/proof-service",
    "services/external-verifier",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

