[package]
name = "ptf_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ptf_common = { path = "../common" }
ptf_verifier_groth16 = { path = "../ptf_verifier_groth16", features = ["cpi"] }

