[package]
name = "ptf_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ptf_common = { path = "../common" }
ptf_factory = { path = "../ptf_factory", features = ["cpi"] }
ptf_vault = { path = "../ptf_vault", features = ["cpi"] }
ptf_verifier_groth16 = { path = "../ptf_verifier_groth16", features = ["cpi"] }

