[package]
name = "external-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-process-stream = "0.1"
tempfile = "3.8"
num-bigint = "0.4"

